<resources>
    <string name="app_name">My Application</string>
    <string name="button">Button</string>
    <string name="left">Left</string>
    <string name="center">Center</string>
    <string name="right">Right</string>
    <string name="bottom">Bottom</string>
    <string name="top">Top</string>
    <string name="btnfalse">BtnFalse</string>
    <string name="btntrue">BtnTrue</string>
    <string name="btnreplay">btnRejouer</string>
    <string name="tvQuestion">Tvquestion</string>
    <string name="tvscore">TvScore</string>
    <string name="question_a">ROJA adore dormir ?</string>
    <string name="question_b">ANNY adore manger ?</string>
    <string name="question_ai">Artificial Intelligence : AI is a film directed
by Steven Spielberg</string>
    <string name="question_taxi_driver">Taxi Driver is a film directed by
Martin Scorsese</string>
    <string name="question_2001">2001 : A space Odyssey is a film
directed by Alfred Hitchcock</string>
    <string name="question_reservoir_dogs">Reservoir dogs is a film
directed by Quentin Tarantino</string>
    <string name="question_citizen_kane">Citizen Kane is a film directed by
Luc Besson</string>
    <string name="tvquestion" />

</resources>