<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/buttoncenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonleft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/left"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/buttoncenter"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/buttonright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/right"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/buttoncenter"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/buttonbottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bottom"
        app:layout_constraintTop_toBottomOf="@+id/buttoncenter"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/buttontop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/top"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/buttoncenter"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>